--- a/src/app/app.component.html
+++ b/src/app/app.component.html
@@ -1,4 +1,3 @@
 <h1>{{ title }}</h1>
 <app-teams *ngFor="let team of teams" [team]="team"></app-teams>
-<p>Break</p>
-<typechart></typechart>
+<typechart [team]="team"></typechart>
