--- a/src/app/app.component.html
+++ b/src/app/app.component.html
@@ -1,3 +1,5 @@
 <h1>{{ title }}</h1>
 <app-teams *ngFor="let team of teams" [team]="team"></app-teams>
+<summery [team] = "team"></summery>
 <typechart [team]="team"></typechart>
+<filter-search [data]="dex"></filter-search>
