--- a/src/app/teams/teams.component.html
+++ b/src/app/teams/teams.component.html
@@ -3,7 +3,7 @@
   <div>{{ team.format }}</div>
   <div>{{ team.ruleset }}</div>
   <div>
-    <div *ngFor="let pokemon of team.members">{{pokemon.name}}</div>
+    <div class="bg-blue-200" *ngFor="let pokemon of team.members">{{pokemon.name}}</div>
   </div>
 </div>
 <br>
