--- a/src/app/app.component.html
+++ b/src/app/app.component.html
@@ -1,5 +1,2 @@
 <h1>{{ title }}</h1>
-<app-teams *ngFor="let team of teams" [team]="team"></app-teams>
-<filter-search [data]="dex"></filter-search>
-<summery [team] = "team"></summery>
-<typechart [team]="team"></typechart>
+<app-teams [teams]="teams"></app-teams>
