--- a/src/app/teams/teams.component.html
+++ b/src/app/teams/teams.component.html
@@ -1,9 +1,23 @@
-<div>
-  <div>{{ team.name }}</div>
-  <div>{{ team.format }}</div>
-  <div>{{ team.ruleset }}</div>
-  <div>
-    <div class="bg-blue-200" *ngFor="let pokemon of team.members">{{pokemon.name}}</div>
+<div class="bg-cyan-100 m-2 rounded-xl p-2 border border-2 border-cyan-200">
+  <p class="bold text-3xl">Teams</p>
+  <div id="teams" class="grid grid-cols-1 md:grid-cols-2 lg:grid-cols-3 grid-flow-row overflow-auto h-auto">
+
+    <div class="team bg-cyan-300 shadow-md hover:shadow-md shadow-cyan-600 m-2 p-2 rounded-xl" *ngFor="let team of teams">
+      <div class="w-full flex">
+        <div class="text-medium bg-cyan-200 w-1/3 rounded-full shadow-inner shadow-cyan-600 p-1 mx-1 text-center">
+          {{ team.name }}</div>
+        <div class="w-1/6"></div>
+        <div class="w-1/4 h-fit text-xs bg-cyan-200 rounded-full shadow-inner shadow-cyan-600 p-1 text-center">
+          {{ team.ruleset }}</div>
+        <div class="w-1/4 h-fit text-xs bg-cyan-200 rounded-full shadow-inner shadow-cyan-600 p-1 mx-1 text-center">
+          {{ team.format }}</div>
+      </div>
+      <div class="sprites grid grid-cols-6 px-4 pt-2">
+        <div *ngFor="let pokemon of team.members">{{pokemon.name}}</div>
+      </div>
+    </div>
+
   </div>
+  <button id="add" class="bg-cyan-300 rounded-full p-2 m-3 shadow-md hover:shadow shadow-cyan-600">Add
+    Team</button>
 </div>
-<br>
