--- a/src/app/typechart/typechart.component.html
+++ b/src/app/typechart/typechart.component.html
@@ -3,7 +3,7 @@
         <td></td>
         <th *ngFor="let type of types">{{type}}</th>
     </tr>
-    <tr *ngFor="let pokemon of team.members">
+    <tr *ngFor="let pokemon of team.team">
         <th>{{ pokemon.name }}</th>
         <td *ngFor="let weak of pokemon.getWeak()">{{ weak }}</td>
     </tr>
