rework pokemon interface

--- a/src/app/summery/summery.component.html
+++ b/src/app/summery/summery.component.html
@@ -2,5 +2,5 @@
     <thead>
         <th>Pokemon</th>
     </thead>
-    <tr *ngFor="let pokemon of team.team"><td>{{pokemon.name}}</td></tr>
+    <!-- <tr *ngFor="let pokemon of team.team"><td>{{pokemon.name}}</td></tr> -->
 </table>
