--- a/src/app/typechart/typechart.component.html
+++ b/src/app/typechart/typechart.component.html
@@ -4,7 +4,7 @@
         <th *ngFor="let type of types">{{type}}</th>
     </tr>
     <tr *ngFor="let pokemon of team.team">
-        <th>{{ pokemon.name }}</th>
-        <td *ngFor="let weak of pokemon.getWeak()">{{ weak }}</td>
+        <!-- <th>{{ pokemon.name }}</th>
+        <td *ngFor="let weak of pokemon.getWeak()">{{ weak }}</td> -->
     </tr>
 </table>
