--- a/src/app/teams/teams.component.html
+++ b/src/app/teams/teams.component.html
@@ -12,7 +12,7 @@
           {{ team.format }}</div>
       </div>
       <div class="sprites grid grid-cols-6 px-4 pt-2">
-        <sprite *ngFor="let pokemon of team.team | keyvalue" [target]="pokemon.key"></sprite>
+        <sprite *ngFor="let pokemon of team.team " [target]="pokemon"></sprite>
       </div>
     </div>
   </div>
