--- a/src/app/matchup/summery/summery.component.html
+++ b/src/app/matchup/summery/summery.component.html
@@ -1,1 +1,46 @@
-<div>summery</div>
+<div class="flex flex-wrap items-center overflow-y-auto">
+    <div class="flex flex-row w-full md:w-128 m-4">
+        <div class="m-1 w-1/2">
+            <div class="bg-slate-400 text-center text-xl text-medium rounded-t-3xl">My Team</div>
+            <table id="myOverview" class="table-auto w-full border-4 border-slate-400 rounded-md">
+                <tr class="bg-slate-400">
+                    <th></th>
+                    <th></th>
+                    <th>Name</th>
+                    <th class="statHead"></th>
+                </tr>
+                <tr *ngFor="let pokemon of summery.blueTeam" class="h-12 bg-cyan-300 border-b border-slate-400">
+                    <td class="w-8">
+                        <div class="-mr-2">#</div>
+                    </td>
+                    <td class="w-12">
+                        <sprite class="w-12" [pokemonId]="pokemon.pid"></sprite>
+                    </td>
+                    <td class="w-32 text">{{pokemon.name}}</td>
+                    <td class="w-12 text-center">{{pokemon.baseStats.spe}}</td>
+                </tr>
+            </table>
+        </div>
+        <div class="m-1 w-1/2">
+            <div class="bg-slate-400 text-center text-xl text-medium rounded-t-3xl">Opponent Team</div>
+            <table id="oppOverview" class="table-auto w-full border-4 border-slate-400">
+                <tr class="bg-slate-400">
+                    <th class="statHead"></th>
+                    <th>Name</th>
+                    <th></th>
+                    <th></th>
+                </tr>
+                <tr *ngFor="let pokemon of summery.redTeam" class="h-12 bg-red-400  border-b border-slate-400">
+                    <td class="w-12 text-center">{{pokemon.baseStats.spe}}</td>
+                    <td class="w-32 text">{{pokemon.name}}</td>
+                    <td class="w-12">
+                        <sprite class="w-12" [pokemonId]="pokemon.pid"></sprite>
+                    </td>
+                    <td class="w-8">
+                        <div class="h-12 -ml-2">#</div>
+                    </td>
+                </tr>
+            </table>
+        </div>
+    </div>
+</div>
