--- a/src/app/team-preview/team-preview.component.html
+++ b/src/app/team-preview/team-preview.component.html
@@ -10,7 +10,7 @@
         {{ team.format }}</div>
     </div>
     <div class="sprites grid grid-cols-6 px-4 pt-2">
-      <sprite *ngFor="let pokemon of team.team " [pokemon]="pokemon"></sprite>
+      <sprite *ngFor="let pokemon of team.team " [pokemonId]="pokemon.pid"></sprite>
     </div>
   </div>
 </a>
