--- a/src/app/matchup/summery/summery.component.html
+++ b/src/app/matchup/summery/summery.component.html
@@ -9,7 +9,7 @@
                     <th>Name</th>
                     <th class="statHead"></th>
                 </tr>
-                <tr *ngFor="let pokemon of summery.blueTeam" class="h-12 bg-cyan-300 border-b border-slate-400">
+                <tr *ngFor="let pokemon of aTeam" class="h-12 bg-cyan-300 border-b border-slate-400">
                     <td class="w-8">
                         <div class="-mr-2">#</div>
                     </td>
@@ -30,7 +30,7 @@
                     <th></th>
                     <th></th>
                 </tr>
-                <tr *ngFor="let pokemon of summery.redTeam" class="h-12 bg-red-400  border-b border-slate-400">
+                <tr *ngFor="let pokemon of bTeam" class="h-12 bg-red-400  border-b border-slate-400">
                     <td class="w-12 text-center">{{pokemon.baseStats.spe}}</td>
                     <td class="w-32 text">{{pokemon.name}}</td>
                     <td class="w-12">
