--- a/src/app/matchup/typechart/typechart.component.html
+++ b/src/app/matchup/typechart/typechart.component.html
@@ -1,4 +1,5 @@
 <div id="typechartWidget" class="w-fit overflow-auto touch-auto m-4 border-4 border-slate-400">
+    <button (click)="swapTeams()">Swap</button>
     <table class="table-auto">
         <thead class="">
             <tr class="">
@@ -9,7 +10,7 @@
             </tr>
         </thead>
         <tbody class="bg-slate-200 border-b-4 border-slate-400">
-            <tr *ngFor="let pokemon of aTeam.team" class="">
+            <tr *ngFor="let pokemon of teams[selectedTeam].team" class="">
                 <th class="w-12 bg-slate-200 border-r-4 border-slate-400">
                     <sprite [pokemonId]="pokemon.pid"></sprite>    
                 </th>
@@ -19,58 +20,19 @@
         <tfoot id="typeSum" class="bg-slate-300">
             <tr>
                 <th>Weaknesses</th>
-                <td *ngFor="let type of types" class="text-center" [ngClass]="weakColor(aTeam.weaknesses[type])">{{aTeam.weaknesses[type]}}</td>
+                <td *ngFor="let type of types" class="text-center" [ngClass]="weakColor(teams[selectedTeam].weaknesses[type])">{{teams[selectedTeam].weaknesses[type]}}</td>
             </tr>
             <tr>
                 <th>Resistances</th>
-                <td *ngFor="let type of types" class="text-center" [ngClass]="resistColor(aTeam.resistances[type])">{{aTeam.resistances[type]}}</td>
+                <td *ngFor="let type of types" class="text-center" [ngClass]="resistColor(teams[selectedTeam].resistances[type])">{{teams[selectedTeam].resistances[type]}}</td>
             </tr>
             <tr>
                 <th>Difference</th>
-                <td *ngFor="let type of types" class="text-center" [ngClass]="diffColor(aTeam.difference[type])">{{aTeam.difference[type]}}</td>
+                <td *ngFor="let type of types" class="text-center" [ngClass]="diffColor(teams[selectedTeam].difference[type])">{{teams[selectedTeam].difference[type]}}</td>
             </tr>
             <tr>
                 <th>Differential</th>
-                <td *ngFor="let type of types" class="text-center" [ngClass]="diffColor(aTeam.differential[type])">{{aTeam.differential[type] | number: '1.0-0'}}</td>
-            </tr>
-        </tfoot>
-    </table>
-</div>
-
-<div id="typechartWidget" class="w-fit overflow-auto touch-auto m-4 border-4 border-slate-400">
-    <table class="table-auto">
-        <thead class="">
-            <tr>
-                <th class="sticky left-0 bg-slate-200 border-r-4 border-slate-400"></th>
-                <th class="sticky left-0 bg-slate-200 border-r-4 border-slate-400" *ngFor="let type of types">
-                    <img class="" src="https://play.pokemonshowdown.com/sprites/types/{{type}}.png" alt={{type}}>
-                </th>
-            </tr>
-        </thead>
-        <tbody class="bg-slate-200 border-b-4 border-slate-400">
-            <tr *ngFor="let pokemon of bTeam.team" class="">
-                <th class="h-12 w-12 bg-slate-200 border-r-4 border-slate-400">
-                    <sprite  [pokemonId]="pokemon.pid"></sprite>    
-                </th>
-                <td *ngFor="let type of types" class="text-center" [ngClass]="typeColor(pokemon.weak[type])">{{pokemon.weak[type]}}</td>
-            </tr>
-        </tbody>
-        <tfoot id="typeSum" class="bg-slate-300">
-            <tr>
-                <th>Weaknesses</th>
-                <td *ngFor="let type of types" class="text-center" [ngClass]="weakColor(bTeam.weaknesses[type])">{{bTeam.weaknesses[type]}}</td>
-            </tr>
-            <tr>
-                <th>Resistances</th>
-                <td *ngFor="let type of types" class="text-center" [ngClass]="resistColor(bTeam.resistances[type])">{{bTeam.resistances[type]}}</td>
-            </tr>
-            <tr>
-                <th>Difference</th>
-                <td *ngFor="let type of types" class="text-center" [ngClass]="diffColor(bTeam.difference[type])">{{bTeam.difference[type]}}</td>
-            </tr>
-            <tr>
-                <th>Differential</th>
-                <td *ngFor="let type of types" class="text-center" [ngClass]="diffColor(bTeam.differential[type])">{{bTeam.differential[type] | number: '1.0-0'}}</td>
+                <td *ngFor="let type of types" class="text-center" [ngClass]="diffColor(teams[selectedTeam].differential[type])">{{teams[selectedTeam].differential[type] | number: '1.0-0'}}</td>
             </tr>
         </tfoot>
     </table>
