--- a/src/app/matchup/speedchart/speedchart.component.html
+++ b/src/app/matchup/speedchart/speedchart.component.html
@@ -1,8 +1,8 @@
 <div>speedchart</div>
-<div class="table-wrp block m-4 max-h-96 w-fit md:w-128 overflow-y-auto border-8 border-slate-400 bg-slate-400">
-    <div class="flex border-b border-slate-400 bg-{{tier.team}}-300 space-x-2" *ngFor="let tier of speedchart">
-        <div>{{tier.name}}</div>
-        <div>{{tier.speed}}</div>
-        <div>{{tier.modifiers}}</div>
-    </div>
-</div>
+<table class="table-wrp block m-4 max-h-96 w-fit md:w-128 overflow-y-auto border-8 border-slate-400 bg-slate-400">
+    <tr class="flex border-b border-slate-400 bg-{{tier.team}}-300 space-x-2" *ngFor="let tier of speedchart" [ngClass]="isSticky(tier.stick)">
+        <td>{{tier.name}}</td>
+        <td>{{tier.speed}}</td>
+        <td>{{tier.modifiers}}</td>
+    </tr>
+</table>
