--- a/src/app/opponent-overview/opponent-overview.component.html
+++ b/src/app/opponent-overview/opponent-overview.component.html
@@ -1,6 +1,12 @@
-<div class="bg-red-100 m-2 rounded-xl p-2 border border-2 border-red-200">
+<div class="flex m-2 space-x-2">
+<div class="w-fit bg-cyan-100 p-1 border-2 border-cyan-200 rounded-xl">
+  <a routerLink="/drafts" class="bg-cyan-300 rounded-full px-2 shadow hover:shadow shadow-cyan-600">Back</a>
+  <div class="h-auto bg-cyan-300 p-2 m-2 rounded-xl shadow-md shadow-cyan-600">
+    <sprite *ngFor="let pokemon of draft.team" [pokemonId]="pokemon.pid" [flipped]="false"></sprite>
+  </div>
+</div>
+<div class="bg-red-100 rounded-xl p-2 border-2 border-red-200">
   <div>
-    <a routerLink="/drafts" class="w-1/6 bg-red-300 rounded-full px-2 my-2 shadow hover:shadow shadow-red-600">Back</a>
     <p class="bold text-3xl m-2">{{draft.leagueName}}</p>
     <div id="teams" class="grid grid-cols-1 md:grid-cols-2 lg:grid-cols-3 grid-flow-row overflow-auto h-auto">
       <a class="team bg-red-300 shadow-md hover:shadow-md shadow-red-600 m-2 p-2 rounded-xl"
@@ -64,4 +70,5 @@
       <textarea></textarea> 
     </div>
   </div>
+</div>
 </div>
