--- a/src/app/matchup/speedchart/speedchart.component.html
+++ b/src/app/matchup/speedchart/speedchart.component.html
@@ -1,8 +1,16 @@
-<div>speedchart</div>
-<table class="table-wrp block m-4 max-h-96 w-fit md:w-128 overflow-y-auto border-8 border-slate-400 bg-slate-400">
-    <tr class="flex border-b border-slate-400 bg-{{tier.team}}-300 space-x-2" *ngFor="let tier of speedchart" [ngClass]="speedClasses(tier)">
-        <td>{{tier.name}}</td>
-        <td>{{tier.speed}}</td>
-        <td>{{tier.modifiers}}</td>
-    </tr>
-</table>
+<div class="border-8 border-slate-400 bg-slate-400">
+    <div class="bg-slate-200">
+        <tr class="border-b-4 border-slate-400">
+            <th class="text-medium py-2">Name</th>
+            <th class="text-medium py-2">Desc</th>
+            <th class="text-medium py-2">Spe</th>
+        </tr>
+    </div>
+    <div class="max-h-128 w-full md:w-128 overflow-y-auto snap-y snap-mandatory">
+        <div class="snap-start border-b border-slate-400" *ngFor="let tier of speedchart" [ngClass]="speedClasses(tier)">
+            <td>{{tier.name}}</td>
+            <td>{{tier.speed}}</td>
+            <td>{{tier.modifiers}}</td>
+        </div>
+    </div>
+</div>
