--- a/src/app/matchup/movechart/movechart.component.html
+++ b/src/app/matchup/movechart/movechart.component.html
@@ -1,8 +1,8 @@
 <div class="m-4">
-    <button (click)="swapTeams()" class="border-t-4 border-x-4 border-slate-400 rounded-t-xl px-2 border-b" [ngClass]="teamColor(true)">⇄</button>
+        <button (click)="swapTeams()" class="border-t-4 border-x-4 border-slate-400 rounded-t-xl px-2 border-b" [ngClass]="teamColor(true)">⇄</button>
     <div class="max-h-128 overflow-auto w-128 border-8 border-slate-400 bg-slate-400">
         <div *ngFor="let category of this.teams[selectedTeam]">
-            <div class="lsheader bg-slate-300 sticky top-0 left-0 border-b-2 border-slate-400">{{category.catName}}
+            <div class="bg-slate-300 sticky top-0 left-0 bg-slate-400">{{category.catName}}
             </div>
             <div class="catTable">
                 <div class="flex border-b-2 border-slate-400 bg-slate-200" *ngFor="let move of category.moves">
