--- a/src/app/draft-overview/draft-overview.component.html
+++ b/src/app/draft-overview/draft-overview.component.html
@@ -1,53 +1,64 @@
 <div class="bg-cyan-100 m-2 rounded-xl p-2 border border-2 border-cyan-200">
   <div>
-    <p class="bold text-3xl">Drafts</p>
+    <p class="bold text-3xl" *ngIf="teams">Drafts</p>
     <div id="teams" class="grid grid-cols-1 md:grid-cols-2 lg:grid-cols-3 grid-flow-row overflow-auto h-auto">
       <team-preview [routerLink]="[team.leagueId]" *ngFor="let team of teams.reverse()" [team]="team"></team-preview>
     </div>
     <button id="addDraft" class="bg-cyan-300 rounded-full p-2 m-3 shadow-md hover:shadow shadow-cyan-600">Add
       Team</button>
   </div>
-  <!-- <div>
+  <div>
     <p class="bold text-3xl">New Draft</p>
-    <div class="team bg-cyan-300 shadow-md hover:shadow-md shadow-cyan-600 m-2 p-2 rounded-xl space-y-3">
-      <div class="w-full flex space-x-3">
-        <div class="w-1/3">
-          <div class="p-1">League Name</div>
-          <input class="text-medium w-full bg-cyan-200 rounded-full shadow-inner shadow-cyan-600 p-1 mx-1 text-center">
+    <form [formGroup]="draftForm" (ngSubmit)="onSubmit()" class="team bg-cyan-300 shadow-md hover:shadow-md shadow-cyan-600 m-2 p-2 rounded-xl space-y-3">
+      <div  class="w-full">
+        <div class="flex space-x-3">
+          <div class="w-1/3">
+            <label class="p-1">League Name</label>
+            <input formControlName="leagueName"
+              class="text-medium w-full bg-cyan-200 rounded-full shadow-inner shadow-cyan-600 p-1 mx-1 text-center">
+          </div>
+          <div class="w-1/3">
+            <label class="p-1">Format</label>
+            <input formControlName="format"
+              class="text-medium w-full bg-cyan-200 rounded-full shadow-inner shadow-cyan-600 p-1 mx-1 text-center">
+          </div>
+          <div class="w-1/3">
+            <label class="p-1">Ruleset</label>
+            <input formControlName="ruleset"
+              class="text-medium w-full bg-cyan-200 rounded-full shadow-inner shadow-cyan-600 p-1 mx-1 text-center">
+          </div>
         </div>
-        <div class="w-1/3">
-          <div class="p-1">Format</div>
-          <input class="text-medium w-full bg-cyan-200 rounded-full shadow-inner shadow-cyan-600 p-1 mx-1 text-center">
-        </div>
-        <div class="w-1/3">
-          <div class="p-1">Ruleset</div>
-          <input class="text-medium w-full bg-cyan-200 rounded-full shadow-inner shadow-cyan-600 p-1 mx-1 text-center">
+        <div *ngFor="let pokemon of draftForm.value.team" class="flex space-x-3">
+          <div>{{pokemon!.pokemonName}}</div>
+          <div>{{pokemon!.shiny}}</div>
+          <div>{{pokemon!.captain}}</div>
         </div>
       </div>
-      <div class="border-2 border-cyan-200 rounded-xl">
-        <div class="w-full flex">
-          <div class="w-1/2 ">
-            <div class="p-1">Name</div>
-            <input
-              class="text-medium w-full bg-cyan-200 rounded-full shadow-inner shadow-cyan-600 p-1 mx-1 text-center">
-
-          </div>
-          <div class="w-1/6">
-            <div class="p-1">Shiny</div>
-            <input
-              class="text-medium w-full bg-cyan-200 rounded-full shadow-inner shadow-cyan-600 p-1 mx-1 text-center">
-
-          </div>
-          <div class="w-1/6">
-            <div class="p-1">League Name</div>
-            <input
-              class="text-medium w-full bg-cyan-200 rounded-full shadow-inner shadow-cyan-600 p-1 mx-1 text-center">
-
-          </div>
-          <button class="w-1/6 bg-cyan-300 rounded-full px-1 my-3 shadow hover:shadow shadow-cyan-600">Add</button>
+      <form [formGroup]="pokemonForm" class="border-2 border-cyan-200 rounded-xl w-full flex">
+        <div class="w-1/2 ">
+          <div class="p-1">Name</div>
+          <input formControlName="pokemonName"
+            class="text-medium w-full bg-cyan-200 rounded-full shadow-inner shadow-cyan-600 p-1 mx-1 text-center">
+          <div *ngIf="pokemonForm.get('pokemonName')?.touched && pokemonForm.get('pokemonName')?.invalid">Invalid name</div>
         </div>
-      </div>
-      <textarea></textarea> 
-    </div>
-  </div> -->
+        <div class="w-1/6">
+          <div class="p-1">Shiny</div>
+          <input type="checkbox" formControlName="shiny"
+            class="text-medium bg-cyan-200 rounded-full shadow-inner shadow-cyan-600 p-1 mx-1 text-center">
+
+        </div>
+        <div class="w-1/6">
+          <div class="p-1">Captain</div>
+          <input type="checkbox" formControlName="captain"
+            class="text-medium bg-cyan-200 rounded-full shadow-inner shadow-cyan-600 p-1 mx-1 text-center">
+        </div>
+        <button (click)="addNewPokemon()"
+          class="w-1/6 bg-cyan-300 rounded-full px-1 my-3 shadow hover:shadow shadow-cyan-600">Add</button>
+      </form>
+      <button class="w-1/6 bg-cyan-300 rounded-full px-1 my-3 shadow hover:shadow shadow-cyan-600">Submit</button>
+    </form>
+    {{draftForm.value | json}}<br>
+    {{pokemonForm.value | json}}
+    <button (click)="testEdit()">Test edit</button>
+  </div>
 </div>
