--- a/src/app/draft-overview/draft-overview.component.html
+++ b/src/app/draft-overview/draft-overview.component.html
@@ -1,15 +1,16 @@
 <div class="bg-cyan-100 m-2 rounded-xl p-2 border border-2 border-cyan-200">
-  <div>
+  <div *ngIf="!formVisible">
     <p class="bold text-3xl" *ngIf="teams">Drafts</p>
     <div id="teams" class="grid grid-cols-1 md:grid-cols-2 lg:grid-cols-3 grid-flow-row overflow-auto h-auto">
       <team-preview [routerLink]="[team.leagueId]" *ngFor="let team of teams.reverse()" [team]="team"></team-preview>
     </div>
-    <button id="addDraft" class="bg-cyan-300 rounded-full p-2 m-3 shadow-md hover:shadow shadow-cyan-600">Add
+    <button (click)="formVisible=true" class="bg-cyan-300 rounded-full p-2 m-3 shadow-md hover:shadow shadow-cyan-600">Add
       Team</button>
   </div>
-  <div>
+  <div *ngIf="formVisible">
+    <button (click)="formVisible=false" class="bg-cyan-300 rounded-full p-2 m-3 shadow-md hover:shadow shadow-cyan-600">Cancel</button>
     <p class="bold text-3xl">New Draft</p>
-    <form [formGroup]="draftForm" (ngSubmit)="onSubmit()" class="team bg-cyan-300 shadow-md hover:shadow-md shadow-cyan-600 m-2 p-2 rounded-xl space-y-3">
+    <form [formGroup]="draftForm"  class="team bg-cyan-300 shadow-md hover:shadow-md shadow-cyan-600 m-2 p-2 rounded-xl space-y-3">
       <div  class="w-full">
         <div class="flex space-x-3">
           <div class="w-1/3">
@@ -55,7 +56,7 @@
         <button (click)="addNewPokemon()"
           class="w-1/6 bg-cyan-300 rounded-full px-1 my-3 shadow hover:shadow shadow-cyan-600">Add</button>
       </form>
-      <button class="w-1/6 bg-cyan-300 rounded-full px-1 my-3 shadow hover:shadow shadow-cyan-600">Submit</button>
+      <button (click)="onSubmit()" class="w-1/6 bg-cyan-300 rounded-full px-1 my-3 shadow hover:shadow shadow-cyan-600">Submit</button>
     </form>
     {{draftForm.value | json}}<br>
     {{pokemonForm.value | json}}
