--- a/src/app/matchup/overview/overview.component.html
+++ b/src/app/matchup/overview/overview.component.html
@@ -7,7 +7,7 @@
                     <th></th>
                     <th></th>
                     <th>Name</th>
-                    <th class="statHead"></th>
+                    <th>{{sortStat | uppercase}}</th>
                 </tr>
                 <tr *ngFor="let pokemon of aTeam" class="h-12 bg-cyan-300 border-b border-slate-400">
                     <td class="w-8">
@@ -25,7 +25,7 @@
             <div class="bg-slate-400 text-center text-xl text-medium rounded-t-3xl">Opponent Team</div>
             <table id="oppOverview" class="table-auto w-full border-4 border-slate-400">
                 <tr class="bg-slate-400">
-                    <th class="statHead"></th>
+                    <th>{{sortStat | uppercase}}</th>
                     <th>Name</th>
                     <th></th>
                     <th></th>
