--- a/src/app/matchup/summery/summery.component.html
+++ b/src/app/matchup/summery/summery.component.html
@@ -1,46 +1,33 @@
-<div class="flex flex-wrap items-center overflow-y-auto">
-    <div class="flex flex-row w-256 md:w-128 m-4">
-        <div class="m-1 w-1/2">
-            <div class="bg-slate-400 text-center text-xl text-medium rounded-t-3xl">My Team</div>
-            <table id="myOverview" class="table-auto w-full border-4 border-slate-400 rounded-md">
-                <tr class="bg-slate-400">
-                    <th></th>
-                    <th></th>
-                    <th>Name</th>
-                    <th class="statHead"></th>
-                </tr>
-                <tr *ngFor="let pokemon of aTeam" class="h-12 bg-cyan-300 border-b border-slate-400">
-                    <td class="w-8">
-                        <div class="-mr-2">#</div>
-                    </td>
-                    <td class="w-12">
-                        <sprite [pokemonId]="pokemon.pid"></sprite>
-                    </td>
-                    <td class="w-32 text">{{pokemon.name}}</td>
-                    <td class="w-12 text-center">{{pokemon.baseStats.spe}}</td>
-                </tr>
-            </table>
-        </div>
-        <div class="m-1 w-1/2">
-            <div class="bg-slate-400 text-center text-xl text-medium rounded-t-3xl">Opponent Team</div>
-            <table id="oppOverview" class="table-auto w-full border-4 border-slate-400">
-                <tr class="bg-slate-400">
-                    <th class="statHead"></th>
-                    <th>Name</th>
-                    <th></th>
-                    <th></th>
-                </tr>
-                <tr *ngFor="let pokemon of bTeam" class="h-12 bg-red-400  border-b border-slate-400">
-                    <td class="w-12 text-center">{{pokemon.baseStats.spe}}</td>
-                    <td class="w-32 text">{{pokemon.name}}</td>
-                    <td class="w-12">
-                        <sprite [pokemonId]="pokemon.pid"></sprite>
-                    </td>
-                    <td class="w-8">
-                        <div class="h-12 -ml-2">#</div>
-                    </td>
-                </tr>
-            </table>
-        </div>
-    </div>
+<div class="m-1">
+    <button (click)="swapTeams()" class="border-t-4 border-x-4 border-slate-400 rounded-t-xl px-2 border-b" [ngClass]="teamColor(true)">⇄</button>
+    <table id="myOverview" class="table-auto w-full border-4 border-slate-400 rounded-md">
+        <tr class="bg-slate-400">
+            <th></th>
+            <th></th>
+            <th>Name</th>
+            <th>Abilities</th>
+            <th>HP</th>
+            <th>ATK</th>
+            <th>DEF</th>
+            <th>SPA</th>
+            <th>SPD</th>
+            <th>SPE</th>
+        </tr>
+        <tr *ngFor="let pokemon of teams[selectedTeam]" class="h-12 border-b border-slate-400" [ngClass]="teamColor()">
+            <td class="w-8">
+                <div class="-mr-2"></div>
+            </td>
+            <td class="w-12">
+                <sprite [pokemonId]="pokemon.pid"></sprite>
+            </td>
+            <td class="w-32">{{pokemon.name}}</td>
+            <td class="w-24"><div *ngFor="let ability of pokemon.abilities" class="text-center">{{ability}}</div></td>
+            <td class="w-12 text-center">{{pokemon.baseStats.hp}}</td>
+            <td class="w-12 text-center">{{pokemon.baseStats.atk}}</td>
+            <td class="w-12 text-center">{{pokemon.baseStats.def}}</td>
+            <td class="w-12 text-center">{{pokemon.baseStats.spa}}</td>
+            <td class="w-12 text-center">{{pokemon.baseStats.spd}}</td>
+            <td class="w-12 text-center">{{pokemon.baseStats.spe}}</td>
+        </tr>
+    </table>
 </div>
