--- a/src/app/matchup/matchup.component.html
+++ b/src/app/matchup/matchup.component.html
@@ -1,10 +1,10 @@
 <div class="bg-gradient-to-r from-cyan-100 via-slate-100 to-red-100">
-    <a routerLink="/drafts/{{draft.leagueId}}">Back</a>
+    <a routerLink="/drafts/{{draft.leagueId}}" class="bg-slate-300 rounded-full px-2 shadow hover:shadow shadow-slate-600">Back</a>
     <div class="flex flex-wrap text-xs">
         <overview [teamId]="this.draft._id" [oppId]="this.oppId"></overview>
         <summery [teamId]="this.draft._id" [oppId]="this.oppId"></summery>
         <typechart [teamId]="this.draft._id" [oppId]="this.oppId"></typechart>
-        <speedchart [teamId]="this.draft._id" [oppId]="this.oppId"></speedchart>
+        <speedchart [teamId]="this.draft._id" [oppId]="this.oppId"></speedchart> 
         <movechart [teamId]="this.draft._id" [oppId]="this.oppId"></movechart>
         <coveragechart [teamId]="this.draft._id" [oppId]="this.oppId"></coveragechart>
     </div>
