--- a/src/app/matchup/movechart/movechart.component.html
+++ b/src/app/matchup/movechart/movechart.component.html
@@ -3,9 +3,10 @@
         [ngClass]="teamColor(true)">⇄</button>
     <div class="max-h-128 overflow-auto w-128 border-8 border-slate-400 bg-slate-400">
         <div *ngFor="let category of this.teams[selectedTeam]">
-            <div class="bg-slate-300 sticky top-0 left-0 bg-slate-400">{{category.catName}}
+            <div class="bg-slate-300 sticky top-0 left-0 text-lg border-b-2 border-slate-400">
+                {{category.catName}}
             </div>
-            <div class="catTable">
+            <div class="">
                 <div class="flex border-b-2 border-slate-400 bg-slate-200" *ngFor="let move of category.moves">
                     <div class="w-1/3 border-r border-slate-400">{{move.moveName}}</div>
                     <div class="w-2/3 flex flex-row flex-wrap">
