--- a/src/app/matchup/summery/summery.component.html
+++ b/src/app/matchup/summery/summery.component.html
@@ -1,17 +1,18 @@
 <div class="m-1">
-    <button (click)="swapTeams()" class="border-t-4 border-x-4 border-slate-400 rounded-t-xl px-2 border-b" [ngClass]="teamColor(true)">⇄</button>
+    <button (click)="swapTeams()" class="border-t-4 border-x-4 border-slate-400 rounded-t-xl px-2 border-b"
+        [ngClass]="teamColor(true)">⇄</button>
     <table id="myOverview" class="table-auto w-full border-4 border-slate-400 rounded-md">
         <tr class="bg-slate-400">
             <th></th>
             <th></th>
             <th>Name</th>
             <th>Abilities</th>
-            <th>HP</th>
-            <th>ATK</th>
-            <th>DEF</th>
-            <th>SPA</th>
-            <th>SPD</th>
-            <th>SPE</th>
+            <th (click)='sortByStat("hp")'>HP</th>
+            <th (click)='sortByStat("atk")'>ATK</th>
+            <th (click)='sortByStat("def")'>DEF</th>
+            <th (click)='sortByStat("spa")'>SPA</th>
+            <th (click)='sortByStat("spd")'>SPD</th>
+            <th (click)='sortByStat("spe")'>SPE</th>
         </tr>
         <tr *ngFor="let pokemon of teams[selectedTeam]" class="h-12 border-b border-slate-400" [ngClass]="teamColor()">
             <td class="w-8">
@@ -21,7 +22,9 @@
                 <sprite [pokemonId]="pokemon.pid"></sprite>
             </td>
             <td class="w-32">{{pokemon.name}}</td>
-            <td class="w-24"><div *ngFor="let ability of pokemon.abilities" class="text-center">{{ability}}</div></td>
+            <td class="w-24">
+                <div *ngFor="let ability of pokemon.abilities" class="text-center">{{ability}}</div>
+            </td>
             <td class="w-12 text-center">{{pokemon.baseStats.hp}}</td>
             <td class="w-12 text-center">{{pokemon.baseStats.atk}}</td>
             <td class="w-12 text-center">{{pokemon.baseStats.def}}</td>
