basic form submission for signup

--- a/src/app/app.component.html
+++ b/src/app/app.component.html
@@ -20,7 +20,7 @@
             </div>
         </div>
     </header>
-    <main class="mb-auto overflow-y-auto">
+    <main class="mb-auto overflow-y-auto w-full h-full">
         <router-outlet></router-outlet>
     </main>
     <footer class="z-10 w-full bg-slate-300 flex border-t-2 border-slate-400 justify-end">
